more dark mode fixes

--- a/_tags.scss
+++ b/_tags.scss
@@ -1,7 +1,7 @@
 // Add pseudo focus support
 .form-control-focus {
   color: var(--bs-body-color, $input-focus-color);
-  background-color: var(--bs-form-control-bg, $input-focus-bg);
+  background-color: var(--bs-form-control-bg, var(--bs-body-bg, $input-focus-bg));
   border-color: $input-focus-border-color;
   outline: 0;
   @if $enable-shadows {
